@@ -178,9 +178,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
+				<version>3.2.5</version>
 				<configuration>
-					<argLine>-Xmx4096m -XX:MaxPermSize=256m</argLine>
+					<threadCount>1</threadCount>
+					<reuseForks>false</reuseForks>
 				</configuration>
 			</plugin>
 			<!-- <plugin> -->
